# sony-wiki-lab

./: .gitignore  README.md  codex.md  design_tokens.md  package-lock.json  package.json  project_report.md
.github/workflows/: node.js.yml  rust-booth-host.yml
.turbo/cache/: 80be9ea40e8240b8-manifest.json  80be9ea40e8240b8-meta.json  80be9ea40e8240b8.tar.zst
REF/stitch_giao_dien_photobooth/enterprise_gallery_share_hub_no_footer/: code.html
REF/stitch_giao_dien_photobooth/enterprise_landscape_3_2_studio_no_footer/: code.html
REF/stitch_giao_dien_photobooth/enterprise_portrait_2_3_studio_no_footer/: code.html
REF/stitch_giao_dien_photobooth/mono_tech_booth/: DESIGN.md
REF/wiki/: legacy-catalog.json
_bmad-output/implementation-artifacts/: typescript-hardening-progress.md
_bmad-output/planning-artifacts/: architecture-decisions.md  current-state-scan.md  epics-and-stories.md  implementation-readiness-review.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
apps/booth-bridge/: CMakeLists.txt  README.md
apps/booth-bridge/include/: booth_bridge.h
apps/booth-bridge/src/: booth_bridge.cpp
apps/booth-host/: Cargo.toml  README.md
apps/booth-host/src/: file_watcher.rs  main.rs  routes.rs  runtime.rs  sdk_bridge.rs  session_manager.rs  settings.rs
apps/booth-host/tests/: runtime_state.rs
apps/web/: .env.local.example  eslint.config.mjs  package.json  playwright.config.ts  tsconfig.json
apps/web/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace  trace-build
apps/web/.next/cache/: .previewinfo  .rscinfo
apps/web/.next/dev/: build-manifest.json  prerender-manifest.json  trace
apps/web/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
apps/web/.next/types/: routes.d.ts  validator.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
apps/web/app/color-lab/: page.tsx
apps/web/app/livestream/: page.tsx
apps/web/app/photobooth/: page.tsx
apps/web/app/wiki/: page.tsx
apps/web/components/color-lab/: ColorLabAdminWorkspace.tsx  ColorLabExperience.tsx  ColorLabPhotoLightbox.tsx  ColorLabPhotoManagerModal.tsx  ColorLabPhotoMasonryGallery.tsx  ColorLabPictureProfilePanel.tsx  ColorLabRecipeEditorModal.tsx  ColorLabRecipeLibraryRail.tsx  TransferToCameraCard.tsx  presentation.ts
apps/web/components/layout/: AppHeader.tsx  AuthSlot.tsx  ClientLayout.tsx  GlobalSearch.tsx  NavIcon.tsx  Sidebar.tsx  ThemeToggle.tsx  TopNavigation.tsx  navigation-config.ts
apps/web/components/photobooth/: PhotoboothCaptureExperience.tsx  PhotoboothGalleryExperience.tsx  PhotoboothHostUnavailableState.tsx  PhotoboothLandingExperience.tsx  PhotoboothQrCode.tsx  PhotoboothReviewExperience.tsx  PhotoboothShareExperience.tsx  PhotoboothStudioShell.tsx
apps/web/components/scroll/: LenisSmoothScroll.tsx  ScrollTop.tsx
apps/web/components/wiki/: WikiAdminPromptModal.tsx  WikiCategoryManagerModal.tsx  WikiCompareExperience.tsx  WikiCompareModal.tsx  (+6 more)
apps/web/types/: auth.ts  color-lab.ts  eslint-config-next.d.ts  gsap.d.ts  navigation.ts  search.ts  supabase.ts  wiki.ts
docs/: implementation_status.md  index.md  navigation_revamp_rollout_checklist.md  phase2_wiki_migration_plan.md  phase3_color_lab_migration_plan.md  photobooth_architecture.md  photobooth_operator_setup.md  photobooth_windows_handover.md  repository_structure.md  wiki_production_ready.md
scripts/: photobooth-smoke.sh  setup.sh  suppress-baseline-warning.cjs  suppress-baseline-warning.ts  wiki-import-legacy.ts
(+365 files in other folders)
