[package]
name = "booth-host"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP server and WebSocket
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tokio-tungstenite = "0.26"

# File system watching
notify = "6.1"

# FFI for loading C++ bridge
libloading = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.12", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# HTTP client (for potential future integrations)
reqwest = { version = "0.12", features = ["json"], optional = true }

# Image processing (for thumbnails)
image = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }

[features]
default = []
image-processing = ["image"]
cloud-upload = ["reqwest"]

[dev-dependencies]
tokio-test = "0.4"
